--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -23,5 +23,5 @@ jobs:
           version: 1.0.0
 
       - run: |
-          supabase link --project-ref jtadixhcpenxplgqcyng
+          supabase link --project-ref $PRODUCTION_PROJECT_ID
           supabase db push
